--- a/.github/workflows/release-deb.yml
+++ b/.github/workflows/release-deb.yml
@@ -77,7 +77,7 @@ jobs:
         with:
           tag_name: v${{ github.event.inputs.version }}
           name: ${{ github.event.inputs.title }}
-          body_path: release-notes.md
+          body_path: .github/releases/v${{ github.event.inputs.version }}.md
           generate_release_notes: true
           files: |
             kcstudio-launchpad.deb
